correção que eu não sei se tá ok